# geokode

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/geokode-cli/: Cargo.toml
crates/geokode-cli/src/: main.rs
crates/geokode-core/: Cargo.toml
crates/geokode-core/benches/: geocode.rs  geocoding.rs
crates/geokode-core/src/: address.rs  batch.rs  fuzzy.rs  geocode.rs  index.rs  lib.rs  offline.rs  spatial.rs
crates/geokode-core/tests/: geokode_tests.rs
crates/geokode-ingest/: Cargo.toml
crates/geokode-ingest/src/: geojson.rs  lib.rs  openaddresses.rs  osm.rs
crates/geokode-server/: Cargo.toml
crates/geokode-server/src/: api_keys.rs  auth.rs  lib.rs  metrics.rs
deploy/: prometheus.yml
deploy/helm/geokode/: Chart.yaml  values.yaml
deploy/helm/geokode/templates/: deployment.yaml  pvc.yaml  service.yaml
docs/: index.html  openapi.yaml  openapi.yml
scripts/: load_test.js
