[package]
name = "geokode-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fst = "0.4"
rstar = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "geocode"
harness = false
