[package]
name = "geokode-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fst = "0.4"
rstar = "0.12"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = { version = "1", optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "geocode"
harness = false
