[package]
name = "geokode-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geokode-core = { path = "../geokode-core" }
geokode-ingest = { path = "../geokode-ingest" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
